force-app/main/default/objects/ProjectBenchmarkInput__c/ProjectBenchmarkInput__c.object-meta.xml
<CustomObject>
    <description>Defines multiplier for input into a Projects Scorecard</description>
    <label>Project Benchmark Input</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Benchmark Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>