force-app/main/default/objects/ProjectBenchmarkInput__c/fields/BenchmarkInputType__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkInputType__c</fullName>
    <description>The Type of Input used for the Benchmark</description>
    <inlineHelpText>The Type of Input used for the Benchmark</inlineHelpText>
    <label>Benchmark Input Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenchmarkInputType</valueSetName>
    </valueSet>
</CustomField>