force-app/main/default/objects/ProjectBenchmarkInput__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Project Benchmark Input Types Related To</description>
    <label>Project</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Project__c.Project_Status__c</field>
            <operation>equals</operation>
            <value>Formation - Engaged, Formation - Confidential, Active</value>
        </filterItems>
        <infoMessage>Project Stage must be Formation - Engaged, Formation - Confidential or Active</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Benchmark Inputs</relationshipLabel>
    <relationshipName>ProjectBenchmarkInputsProject</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>