force-app/main/default/objects/ProjectBenchmarkInput__c/fields/ScoreMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ScoreMultiplier__c</fullName>
    <description>The count will be multipled by this value when used in the benchmark</description>
    <inlineHelpText>The count will be multipled by this value when used in the benchmark</inlineHelpText>
    <label>Score Multiplier</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>