force-app/main/default/objects/ProjectBenchmarkInput__c/fields/UseInEvntBenchmark__c.field-meta.xml
<CustomField>
    <fullName>UseInEvntBenchmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Input when calculating the Event Benchmark</description>
    <inlineHelpText>Use Input when calculating the Event Benchmark</inlineHelpText>
    <label>Use In Evnt Benchmark</label>
    <type>Checkbox</type>
</CustomField>