force-app/main/default/objects/ProjectBenchmarkInput__c/fields/UseInMemberBenchmark__c.field-meta.xml
<CustomField>
    <fullName>UseInMemberBenchmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Input when calculating the Membership Benchmark</description>
    <inlineHelpText>Use Input when calculating the Membership Benchmark</inlineHelpText>
    <label>Use In Member Benchmark</label>
    <type>Checkbox</type>
</CustomField>