force-app/main/default/objects/ProjectBenchmarkInput__c/fields/UseInTandCBenchmark__c.field-meta.xml
<CustomField>
    <fullName>UseInTandCBenchmark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use Input when calculating the Training and Certification Benchmark</description>
    <inlineHelpText>Use Input when calculating the Training and Certification Benchmark</inlineHelpText>
    <label>Use In Training and Cert Benchmark</label>
    <type>Checkbox</type>
</CustomField>