force-app/main/default/objects/ProjectBenchmarkInput__c/validationRules/NameIsUnique.validationRule-meta.xml
<ValidationRule>
    <fullName>NameIsUnique</fullName>
    <active>true</active>
    <description>Project and Benchmark Type Combination must be unique</description>
    <errorConditionFormula>AND(
CONTAINS(
VLOOKUP(
$ObjectType.ProjectBenchmarkInput__c.Fields.Name ,
$ObjectType.ProjectBenchmarkInput__c.Fields.Name, Name
),
Name
),
OR(
ISNEW(), ISCHANGED(Name)
)
)</errorConditionFormula>
    <errorMessage>Project and Benchmark Type Combination must be unique</errorMessage>
</ValidationRule>