force-app/main/default/objects/ProjectBenchmarkInput__c/validationRules/ScoreMultiplierGtZero.validationRule-meta.xml
<ValidationRule>
    <fullName>ScoreMultiplierGtZero</fullName>
    <active>true</active>
    <description>Score Multiplier must be &gt; 0</description>
    <errorConditionFormula>ScoreMultiplier__c &lt;= 0</errorConditionFormula>
    <errorMessage>Score Multiplier must be &gt; 0</errorMessage>
</ValidationRule>